<resources>
    <string name="app_name">Home</string>
    <string name="sport">Sport</string>
    <string name="maths">Maths</string>
    <string name="cau">Câu </string>
    <string name="dap_an">Đáp án :</string>
    <string name="a">A. </string>
    <string name="b">B. </string>
    <string name="c">C. </string>
    <string name="d">D. </string>
    <string name="NextQuestion">Câu hỏi tiếp theo</string>
</resources>
